Fix form / nav overlay z-index on mobile screens

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,5 +1,6 @@
 .nav {
   --nav-spacing: 1rem;
+  z-index: 2;
 
   display: flex;
   align-items: center;
